update swaggers